# Multi-agent-research-assistant

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
notebooks/: analiza_projektu.ipynb  exploration.ipynb
scripts/: setup_ollama.ps1  setup_ollama.sh
src/: __init__.py
src/agents/: __init__.py  researcher.py  supervisor.py  synthesizer.py  translator.py  verifier.py
src/config/: __init__.py  settings.py
src/graph/: __init__.py  state.py  workflow.py
src/prompts/: __init__.py  templates.py
src/tools/: __init__.py  search.py
tests/: __init__.py  test_agents.py  test_graph.py  test_tools.py
